--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   gap: ^3.0.1
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
+  syncfusion_flutter_charts: ^24.2.7
 
 dev_dependencies:
   flutter_test:
